کارهای در حال انجام

--- a/templates/run/running.html
+++ b/templates/run/running.html
@@ -9,11 +9,11 @@
 
         <table cellpadding="5" cellspacing="0" class="simple" style="width: 100%;">
             <tr>
-                <td class="label" style="width: 200px; font-weight: bold;">title :</td>
+                <td class="label" style="width: 200px; font-weight: bold;">عنوان :</td>
                 <td>{{item.title}}</td>
             </tr>
             <tr>
-                <td class="label">progress :</td>
+                <td class="label">پیشرفت :</td>
                 <td style="vertical-align: middle;" layout="row">
                     <span style="padding: 0 0 0 10px;">{{item.progress | persianNumbers}}%</span>
                     <md-progress-linear style="margin-top: 8px;"
@@ -22,39 +22,43 @@
                 </td>
             </tr>
             <tr>
-                <td class="label">creationEpoch :</td>
+                <td class="label">تاریخ ساخت :</td>
                 <td>{{item.creationEpoch | shamsiDateTime | persianNumbers}}</td>
             </tr>
             <tr>
-                <td class="label">remindedTryCount :</td>
-                <td>{{item.remindedTryCount | persianNumbers}}</td>
+                <td class="label">تعداد سعی‌های باقی‌مانده :</td>
+                <td>{{item.remindedTryCount | persianNumbers}} از {{item.definition.maxTryCount | persianNumbers}}</td>
             </tr>
             <tr>
-                <td class="label">validUntilEpoch :</td>
+                <td class="label">تاریخ انقضا :</td>
                 <td>{{item.validUntilEpoch | shamsiDateTime | persianNumbers}}</td>
             </tr>
             <tr>
-                <td class="label">startEpoch :</td>
+                <td class="label">زمان شروع :</td>
                 <td>{{item.startEpoch | shamsiDateTime | persianNumbers}}</td>
             </tr>
             <tr>
-                <td class="label">endEpoch :</td>
+                <td class="label">زمان پایان :</td>
                 <td>{{item.endEpoch | shamsiDateTime | persianNumbers}}</td>
             </tr>
             <tr>
-                <td class="label">state :</td>
+                <td class="label">وضعیت :</td>
                 <td>{{item.state}}</td>
             </tr>
+<!--
             <tr>
                 <td class="label">definition creationEpoch :</td>
                 <td>{{item.definition.creationEpoch | shamsiDateTime | persianNumbers}}</td>
             </tr>
+-->
+<!--
             <tr>
-                <td class="label"> definition maxTryCount :</td>
+                <td class="label">بیشترین تعداد تلاش برای اجرا :</td>
                 <td>{{item.definition.maxTryCount | persianNumbers}}</td>
             </tr>
+-->
             <tr>
-                <td class="label"> definition maxTryDuration :</td>
+                <td class="label">بیشترین زمان برای اجرای صحیح :</td>
                 <td>{{item.definition.maxTryDuration | persianNumbers}}</td>
             </tr>
         </table>
