--- a/templates/mappings/template-item-rule.html
+++ b/templates/mappings/template-item-rule.html
@@ -5,9 +5,9 @@
     <span>{{r.property}}</span>
 </td>
 <td ng-if="!r.editing">
-    <span ng-if="!r.predicate.startsWith('fkgo:')">{{r.predicate}}</span>
+    <span ng-if="!r.predicate.startsWith('fkgo:')">{{r.predicate | mapPrefix}}</span>
     <a ng-if="r.predicate.startsWith('fkgo:')" target="_blank"
-       href="http://dmls.iust.ac.ir/pkg/#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{r.predicate.replace('fkgo:', '')}}">{{r.predicate}}</a>
+       href="http://dmls.iust.ac.ir/pkg/#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{r.predicate.replace('fkgo:', '')}}">{{r.predicate | mapPrefix}}</a>
 </td>
 <td ng-if="!r.editing">
     <span>{{r.unit | extractLastUrlItem}}</span>
