savePropertiy inside class-edit

--- a/styles/main.css
+++ b/styles/main.css
@@ -635,6 +635,11 @@ ul.small {
   width: 300px;
   display: block;
 }
+[ng\:cloak],
+[ng-cloak],
+.ng-cloak {
+  display: none !important;
+}
 /**/
 .login-form md-card {
   padding: 0 !important;
