--- a/styles/main.less
+++ b/styles/main.less
@@ -504,6 +504,10 @@ ul.small {
   display: block;
 }
 
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 /**/
 .login-form {
   md-card {
