--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -68,13 +68,13 @@
             <textarea type="text" ng-model="data.property.ranges" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
-        <md-input-container>
+        <md-input-container ng-hide="true">
             <label>دامنه پیشنهادی : </label>
             <textarea type="text" ng-model="data.property.autoDomains" ng-disabled="true" ng-list="&#10;"
                       ng-trim="false"/>
         </md-input-container>
 
-        <md-input-container>
+        <md-input-container ng-hide="true">
             <label>محدوده پیشنهادی : </label>
             <textarea type="text" ng-model="data.property.autoRanges" ng-disabled="true" ng-list="&#10;"
                       ng-trim="false"/>
