برای سامانه هستان‌شناسی، اون جاهایی که داری خصیصه‌ها رو جستجو می‌کنی از این سرویس استفاده کن بی زحمت: http://dmls.iust.ac.ir:8090/ontology/rest/v1/ontologyPredicates?keyword=leng تتطبیق کد با سرویس جدید

--- a/styles/main.less
+++ b/styles/main.less
@@ -384,7 +384,7 @@ ul.small {
 
 .dialog-panel-big {
   &:extend(.dialog-panel all);
-  width: 760px;
+  width: 85%;
 
   .dialog-panel-content {
     max-height: 580px;
