--- a/templates/mappings/template-item-rule-edit.html
+++ b/templates/mappings/template-item-rule-edit.html
@@ -18,7 +18,8 @@
                              md-require-match
                              ng-required="true"
                              md-floating-label="predicate"
-                             required>
+                             required
+            style="width: 300px;">
                 <md-item-template>
                     <span md-highlight-text="searchPredicate" md-highlight-flags="^i">{{item}}</span>
                 </md-item-template>
