--- a/templates/ontology/property-selector.html
+++ b/templates/ontology/property-selector.html
@@ -7,7 +7,7 @@
                         <label>جستجوی خصیصه</label>
                         <md-autocomplete
                                 md-autocomplete-snap="width"
-                                md-items="item in queryProperties(searchText)"
+                                md-items="item in suggestProperties(searchText)"
                                 md-selected-item="selectedItem"
                                 md-search-text="searchText"
                                 md-item-text="item"
