--- a/styles/main.css
+++ b/styles/main.css
@@ -533,7 +533,7 @@ ul.small {
   box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
 }
 .dialog-panel-big {
-  width: 760px;
+  width: 85%;
 }
 .dialog-panel-big .dialog-panel-content {
   max-height: 580px;
