mapping.edit (changed) mapping.remove (added)

--- a/styles/main.css
+++ b/styles/main.css
@@ -551,7 +551,7 @@ ul.small {
   max-height: none;
 }
 .dialog-panel-content {
-  padding: 0 15px;
+  padding: 5px 15px;
   overflow-y: scroll;
   width: 100%;
 }
