--- a/styles/main.less
+++ b/styles/main.less
@@ -410,7 +410,7 @@ ul.small {
 }
 
 .dialog-panel-content {
-  padding: 0 15px;
+  padding: 5px 15px;
   //max-height: 480px;
   overflow-y: scroll;
   width: 100%;
