--- a/templates/mappings/template-constant-edit.html
+++ b/templates/mappings/template-constant-edit.html
@@ -1,4 +1,3 @@
-<!--<md-dialog aria-label="{{action.title}}" style="">-->
 <form name="myForm" ng-submit="$event.preventDefault()">
     <div role="dialog" aria-label="" layout="column" layout-align="center center">
         <md-toolbar>
@@ -70,13 +69,16 @@
 
         <div layout="row" class="rtl">
             <md-button type="submit"
+                       aria-label="ذخیره"
                        class="md-raised md-primary"
                        ng-disabled="myForm.$invalid"
                        ng-click="save()">ذخیره
             </md-button>
 
-            <md-button class="md-raised" ng-click="close()">انصراف</md-button>
+            <md-button class="md-raised"
+                       ng-click="close()"
+                       aria-label="انصراف">انصراف
+            </md-button>
         </div>
     </div>
 </form>
-<!--</md-dialog>-->
