--- a/templates/mappings/template-item-rule-edit.html
+++ b/templates/mappings/template-item-rule-edit.html
@@ -1,81 +1,104 @@
-<td ng-if="r.editing">{{$index+1}}</td>
-<td ng-if="r.editing" colspan="6">
-    <form name="myForm" ng-submit="$event.preventDefault()">
-        <div layout="row" dir="rtl" class="rtl right">
-            <md-input-container>
+<form name="myForm" ng-submit="$event.preventDefault()">
+    <div role="dialog" aria-label="" layout="column" layout-align="center center">
+        <md-toolbar>
+            <div class="md-toolbar-tools rtl">
+                <h5>{{action.title}}</h5>
+                <span flex></span>
+                <md-button class="md-icon-button" ng-click="close()">
+                    <span class="fa fa-lg fa-close" ng-click="close();" aria-label="close"></span>
+                </md-button>
+            </div>
+        </md-toolbar>
+
+        <div class="dialog-panel-content scroll2 rtl right" layout-padding layout="column" dir="rtl" style="height: 360px;">
+            <md-input-container class="rtl right" >
                 <label>property</label>
-                <input type="text" ng-model="r.property" required ng-disabled="true" aria-label="property">
+                <input type="text"
+                       ng-model="model.property"
+                       ng-disabled="true"
+                       required
+                       aria-label="property">
             </md-input-container>
 
-            <md-autocomplete md-input-name="autocompletePredicate"
-                             md-selected-item="r.predicate"
-                             md-selected-item-change="selectedItemChange(item)"
-                             md-search-text="searchPredicate"
-                             md-items="item in suggestPredicates(searchPredicate)"
-                             md-item-text="item"
-                             md-input-minlength="2"
-                             md-delay="300"
-                             md-require-match
-                             md-floating-label="predicate"
-            style="width: 300px;">
-                <md-item-template>
-                    <span md-highlight-text="searchPredicate" md-highlight-flags="^i">{{item}}</span>
-                </md-item-template>
-                <!--<div ng-messages="myForm.autocompletePredicate.$error"
-                     ng-if="myForm.autocompletePredicate.$touched">
-                    <div ng-message="required">مقادیر خواسته شده را وارد کنید</div>
-                </div>-->
-                <md-not-found>No predicate matching.</md-not-found>
-            </md-autocomplete>
+            <div layout="row" layout-align="center center" style="width: 100%;">
+                <md-autocomplete class="rtl right" dir="rtl" style="width: 100%;"
+                                 md-input-name="autocompletePredicate"
+                                 md-selected-item="model.predicate"
+                                 md-search-text="searchPredicate"
+                                 md-items="item in suggestPredicates(searchPredicate)"
+                                 md-item-text="item"
+                                 md-input-minlength="2"
+                                 md-delay="300"
+                                 md-require-match
+                                 md-floating-label="predicate" aria-label="predicate">
+                    <md-item-template>
+                        <span md-highlight-text="searchPredicate" md-highlight-flags="^i">{{item}}</span>
+                    </md-item-template>
+                    <md-not-found>No predicate matching.</md-not-found>
+                </md-autocomplete>
+                <span flex></span>
+                <md-button class="md-icon-button" ng-click="ignore()" aria-label="ignore">
+                    <span class="fa fa-2x fa-exclamation-circle" style="color: darkorange;"></span>
+                </md-button>
+            </div>
+            <br>
 
-            <md-autocomplete md-input-name="autocompleteUnit"
-                             md-selected-item="r.unit"
+            <md-autocomplete class="rtl right" dir="rtl"
+                             md-input-name="autocompleteUnit"
+                             md-selected-item="model.unit"
                              md-search-text="searchUnit"
                              md-items="item in suggestUnits(searchUnit)"
                              md-item-text="item | extractLastUrlItem"
                              md-input-minlength="2"
                              md-delay="300"
                              md-require-match
-                             md-floating-label="unit">
+                             md-floating-label="unit" aria-label="unit">
                 <md-item-template>
                     <span md-highlight-text="searchUnit" md-highlight-flags="^i">{{item | extractLastUrlItem}}</span>
                 </md-item-template>
                 <md-not-found>No unit matching.</md-not-found>
             </md-autocomplete>
+            <br>
 
-            <md-autocomplete md-input-name="autocompleteTransform"
-                             md-selected-item="r.transform"
+            <md-autocomplete class="rtl right" dir="rtl"
+                             md-input-name="autocompleteTransform"
+                             md-selected-item="model.transform"
                              md-search-text="searchTransform"
                              md-items="item in suggestTransforms(searchTransform)"
                              md-item-text="item.label"
-                             md-input-minlength="2"
+                             md-input-minlength="0"
                              md-delay="300"
                              md-require-match
-                             md-floating-label="transform">
+                             md-floating-label="transform" aria-label="transform">
                 <md-item-template>
-                    <span md-highlight-text="searchTransform" md-highlight-flags="^i">{{item.label}}({{item.transform}})</span>
+                <span md-highlight-text="searchTransform"
+                      md-highlight-flags="^i">{{item.label}}({{item.transform}})</span>
                 </md-item-template>
-                <!--<div ng-messages="myForm.autocompleteTransform.$error"
-                     ng-if="myForm.autocompleteTransform.$touched">
-                    <div ng-message="required">مقادیر خواسته شده را وارد کنید</div>
-                </div>-->
                 <md-not-found>No transform matching.</md-not-found>
             </md-autocomplete>
+            <br>
 
-            <md-checkbox ng-model="r.valid" aria-label="تایید"></md-checkbox>
-
-            <md-button class="md-icon-button" ng-click="ignore(r)" style="margin-top:15px;" aria-label="ignore">
-                <span class="fa fa-2x fa-exclamation-circle" style="color: darkorange;"></span>
-            </md-button>
+            <div class="row" layout-align="center center">
+                <span>تایید</span>
+                <md-checkbox ng-model="model.valid" aria-label="تایید"></md-checkbox>
+            </div>
         </div>
-        <div>
-            <md-button type="submit" aria-label="ذخیره"
-                       class="md-raised md-primary"
-                       ng-disabled="myForm.$invalid"
-                       ng-click="save(r, $index)">ذخیره
-            </md-button>
 
-            <md-button class="md-raised" ng-click="cancel(r, $index)" aria-label="انصراف">انصراف</md-button>
+        <div style="border-top: solid 1px #ddd; width: 100%;">
+            <div layout="row" layout-align="center center" class="rtl" style="padding: 10px 0;">
+                <md-button type="submit"
+                           aria-label="ذخیره"
+                           class="md-raised md-primary"
+                           ng-disabled="myForm.$invalid"
+                           ng-click="save(model, $index)">ذخیره
+                </md-button>
+
+                <md-button class="md-raised"
+                           ng-click="close()"
+                           aria-label="انصراف">انصراف
+                </md-button>
+            </div>
         </div>
-    </form>
-</td>
+
+    </div>
+</form>
